--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "unexpected-check": "^2.0.0"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "chance-generators": "3.5.0",
-    "eslint": "5.10.0",
-    "eslint-config-pretty-standard": "2.0.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-prettier": "3.0.0",
-    "get-stream": "4.0.0",
-    "lint-staged": "8.1.0",
-    "mocha": "5.2.0",
-    "pre-commit": "1.2.2",
-    "prettier": "1.15.3",
-    "prettier-package-json": "2.0.1",
-    "unexpected-markdown": "1.7.4"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "chance-generators": "^3.5.0",
+    "eslint": "^5.10.0",
+    "eslint-config-pretty-standard": "^2.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "get-stream": "^4.0.0",
+    "lint-staged": "^8.1.0",
+    "mocha": "^5.2.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "^1.15.3",
+    "prettier-package-json": "^2.0.1",
+    "unexpected-markdown": "^1.7.4"
   },
   "keywords": [
     "generative testing",
