--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint-staged": "^9.1.0",
     "mocha": "^6.0.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.15.3",
+    "prettier": "~1.19.1",
     "prettier-package-json": "^2.0.1",
     "unexpected-markdown": "^4.0.0"
   },
