--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "babel-preset-env": "^1.7.0",
     "chance-generators": "^3.5.0",
     "eslint": "^6.0.0",
-    "eslint-config-pretty-standard": "^3.0.1",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
     "get-stream": "^5.0.0",
     "lint-staged": "^10.0.0",
     "mocha": "^7.0.0",
