--- a/package.json
+++ b/package.json
@@ -51,12 +51,10 @@
   "lint-staged": {
     "*.js": [
       "eslint",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "package.json": [
-      "prettier-package-json --write",
-      "git add"
+      "prettier-package-json --write"
     ]
   },
   "pre-commit": "lint-staged"
