--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git://github.com/unexpectedjs/unchecked.git",
   "version": "1.2.3",
   "main": "./lib/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "babel --out-dir lib --quiet src",
     "lint": "eslint . && prettier --check '**/*.{js,md}'",
