--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: Tests
-'on':
+"on":
   push:
   pull_request:
 
@@ -10,10 +10,10 @@ jobs:
     strategy:
       matrix:
         node:
-          - '10'
-          - '12'
-          - '14'
-          - '16'
+          - "10"
+          - "12"
+          - "14"
+          - "16"
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
@@ -29,21 +29,14 @@ jobs:
     strategy:
       matrix:
         targets:
-          - name: 'Lint'
-            target: 'lint'
-          - name: 'Coverage'
-            target: 'coverage'
+          - name: "Lint"
+            target: "lint"
 
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: "14"
       - run: npm install
       - run: npm run ${{ matrix.targets.target }}
-      - name: Upload coverage
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-        if: ${{ matrix.targets.target == 'coverage' }}
